--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -46,7 +46,7 @@
                             Dropdown button
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="user">User Managment System</a></li>
+                            <li><a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN')" href="user">User Managment System</a></li>
                             <li><a class="dropdown-item" href="messages">Messages</a></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
@@ -97,7 +97,7 @@
 
 
 
-            <td sec:authorize="hasRole('ROLE_ADMIN')" >
+            <td sec:authorize="hasRole('ROLE_ADMIN')">
 
                 <a th:href = "@{/messages/{id}(id=${message.id})}"
                    class="btn btn-info">Delete  <i class="fa-solid fa-trash-can"></i></a>
