--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -112,7 +112,7 @@
 
                 <div class="form-group">
                     <label for="password"> Password  </label> :
-                    <input type="text" class="form-control" id="password" name="password"
+                    <input type="password" class="form-control" id="password" name="password"
                            placeholder="Enter Password" required="required" />
                 </div>
 <br>
