--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -51,12 +51,13 @@
 				<li class="nav-item">
 					<div class="dropdown" sec:authorize="isAuthenticated()">
 						<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-							Dropdown button
+							Options
 						</button>
 						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 							<li><a class="dropdown-item" sec:authorize="hasRole('ROLE_ADMIN')" href="user">User Managment System</a></li>
 							<li><a class="dropdown-item" href="messages">Messages</a></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
+							<li><a class="dropdown-item" target="_blank" href="https://github.com/ISA-KAYABASI/Survey-Satisfaction-Application/commits?author=ISA-KAYABASI">Surprise</a></li>
+
 						</ul>
 
 
