h2 database connection settings

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -106,7 +106,7 @@
 
                 <div class="form-group">
                     <label for="username"> Email   </label> :
-                    <input type="email" class="form-control" id="username" name="username"
+                    <input type="text" class="form-control" id="username" name="username"
                            placeholder="Enter Email" autofocus="autofocus" required="required" />
                 </div>
 
