--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -97,21 +97,21 @@
                     <label class="control-label" for="firstName">
                         First Name
                     </label>
-                    <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" />
+                    <input id="firstName" class="form-control" th:field="*{firstName}" placeholder="Enter First Name" required autofocus="autofocus" />
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="lastName">
                         Last Name
                     </label>
-                    <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" />
+                    <input id="lastName" class="form-control" th:field="*{lastName}" placeholder="Enter Last Name" required autofocus="autofocus" />
                 </div>
 
                 <div class="form-group">
                     <label class="control-label" for="email">
                         Email
                     </label>
-                    <input type="email" id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" />
+                    <input type="email" id="email" class="form-control" th:field="*{email}" placeholder="Enter Email" required autofocus="autofocus" />
                 </div>
 
 
@@ -119,7 +119,7 @@
                     <label class="control-label" for="password">
                         Password
                     </label>
-                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" />
+                    <input id="password" class="form-control" type="password" th:field="*{password}" placeholder="Enter Password" required autofocus="autofocus" />
                 </div>
 
 <!--                <input type="text" id="enterValue" class="form-control" th:field="*{enterValue}"/>-->
